--- a/WackyMaps.csproj
+++ b/WackyMaps.csproj
@@ -6,4 +6,19 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Pages\styling\**" />
+    <Content Remove="Pages\styling\**" />
+    <EmbeddedResource Remove="Pages\styling\**" />
+    <None Remove="Pages\styling\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="Pages\Privacy.cshtml.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="Pages\Privacy.cshtml" />
+  </ItemGroup>
+
 </Project>
