Created a cshtml file for the about page of the website. Was able to get the nav bar to work and have the links take me to the corresponding page

--- a/WackyMaps.csproj
+++ b/WackyMaps.csproj
@@ -21,4 +21,8 @@
     <Content Remove="Pages\Privacy.cshtml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="wwwroot\css\about.css" />
+  </ItemGroup>
+
 </Project>
