all of the tables with directions are finished started styling the location pages

--- a/WackyMaps.csproj
+++ b/WackyMaps.csproj
@@ -22,6 +22,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Pages\Shared\diagrams.html" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="wwwroot\css\about.css" />
   </ItemGroup>
 
